<?xml version="1.0"?>
<package format="3">
  <name>aliyun_image_analyzer</name>
  <version>0.1.0</version>
  <description>DashScope/Qwen-VL image analysis node for smart medical competition.</description>
  <maintainer email="team@example.com">competition_team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv</depend>
  <depend>curl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
